--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,19 @@
 
         --border: 217 33% 20%;
     }
+
+    * {
+        @apply border-border;
+    }
+
+    html {
+        @apply scroll-smooth;
+    }
+
+    body {
+        @apply bg-background text-foreground transition-colors duration-300;
+        font-feature-settings: "rlig" 1, "calt" 1;
+    }
 }
 
 @utility container {
@@ -146,4 +159,12 @@
 @utility meteor {
     @apply absolute bg-linear-to-r from-white via-white to-transparent rounded-full;
     box-shadow: 0 0 10px 5px rgba( 255, 255, 255, 0.3 );
+}
+
+
+#root{
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
 }
