--- a/src/index.css
+++ b/src/index.css
@@ -47,13 +47,16 @@
     @keyframes meteor {
         0% {
             transform: rotate(215deg) translateX(0);
+            opacity: 0;
+        }
+        2% {
             opacity: 1;
         }
-        70% {
+        5% {
             opacity: 1;
         }
-        100% {
-            transform: rotate(215deg) translateX(-500px);
+        7% {
+            transform: rotate(215deg) translateX(-2000px);
             opacity: 0;
         }
     }
