--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,12 @@
             transform: translateY(-10px);
         }
     }
-    @keyframes pulse-sublte {
+    @keyframes pulse-subtle {
         0%, 100% {
             opacity: 1;
         }
         50% {
-            opacity: 0.8;
+            opacity: 0.2;
         }
     }
     @keyframes fade-in {
